# pact

./: .env.example  .gitignore  Pact_MVP_100_Step_Development_Plan.md  Pact_MVP_Technical_Document.md  README.md  docker-compose.offchain.yml  dop_doc.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
contracts/: Cargo.toml  README.md
contracts/deployments/: latest.contracts.json
contracts/gated-asset-controller/: Cargo.toml
contracts/gated-asset-controller/src/: lib.rs
contracts/milestone-escrow/: Cargo.toml
contracts/milestone-escrow/src/: lib.rs
contracts/milestone-escrow/test_snapshots/tests/: activates_funded_program_with_matching_tranches.1.json  activation_without_tranches_fails.1.json  cancelled_program_rejects_release.1.json  creates_program_in_draft_status.1.json  duplicate_tranche_fails.1.json  funds_program.1.json  inactive_policy_fails_eligibility_submission.1.json  inactive_root_fails_eligibility_submission.1.json  invalid_amount_fails.1.json  invalid_tranche_amount_fails.1.json  paused_program_rejects_eligibility_submission.1.json  real_verifier_mode_releases_tranche_with_bound_digest_proofs.1.json  releases_ready_tranche.1.json  (+9 more)
contracts/nullifier-registry/: Cargo.toml
contracts/nullifier-registry/src/: lib.rs
contracts/policy-registry/: Cargo.toml
contracts/policy-registry/src/: lib.rs
contracts/root-registry/: Cargo.toml
contracts/root-registry/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/verifier-adapter/: Cargo.toml
contracts/verifier-adapter/src/: lib.rs
(+248 files in other folders)
