[workspace]
members = [
  "shared",
  "policy-registry",
  "root-registry",
  "nullifier-registry",
  "verifier-adapter",
  "milestone-escrow",
  "gated-asset-controller"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
pact-contracts-shared = { path = "shared" }
soroban-sdk = "27.0.0-rc.1"
